se agg la carpeta Auth q contiene registro y login

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -49,9 +49,9 @@
     <div class="mb-4">
       <img src="/img/adicion y retiro.jpg" alt="Adición y retiro de materias" class="w-full h-40 object-cover rounded-md">
     </div>
-    <h3 class="text-xl font-semibold text-blue-800 mb-2">Adición y Retiro</h3>
+    <h3 class="text-xl font-semibold text-blue-800 mb-7">Adición y Retiro</h3>
     <p class="text-gray-600 mb-4">Gestiona la adición y retiro de tus materias sin filas.</p>
-    <a href="/estudiante/adicion-retiro" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-gradient-to-r from-cyan-200 to-blue-500 to-blue-700 transition">Gestionar</a>
+    <a href="/estudiante/adicion-retiro" class="inline-block mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-gradient-to-r from-cyan-200 to-blue-500 to-blue-700 transition">Gestionar</a>
   </div>
 
   <!-- Tarjeta 3 -->
@@ -59,9 +59,9 @@
     <div class="mb-4">
       <img src="/img/actas especiales.jpg"" alt="Solicitud de actas especiales" class="w-full h-40 object-cover rounded-md">
     </div>
-    <h3 class="text-xl font-semibold text-blue-800 mb-2">Actas Especiales</h3>
+    <h3 class="text-xl font-semibold text-blue-800 mb-7">Actas Especiales</h3>
     <p class="text-gray-600 mb-4">Solicita actas especiales de manera digital y simplificada.</p>
-    <a href="/estudiante/acta-especial" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-gradient-to-r from-cyan-200 to-blue-500 to-blue-700 transition">Solicitar</a>
+    <a href="/estudiante/acta-especial" class="inline-block mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-gradient-to-r from-cyan-200 to-blue-500 to-blue-700 transition">Solicitar</a>
   </div>
 
   <!-- Tarjeta 4 -->
