se trabajo con inscripciones y sus controladores

--- a/src/views/estudiante/adicionRetiro.ejs
+++ b/src/views/estudiante/adicionRetiro.ejs
@@ -2,7 +2,7 @@
   <!-- Formulario de Adición -->
 <div class="bg-white p-6 rounded shadow flex flex-col h-full">
   <h2 class="text-2xl font-bold text-blue-700 mb-4">Solicitud de Adición</h2>
-  <form action="/api/estudiante/adicion" method="POST" class="flex flex-col flex-grow space-y-4">
+  <form class="flex flex-col flex-grow space-y-4">
     
     <!-- Selección de semestre -->
     <div>
@@ -94,7 +94,7 @@ document.addEventListener("DOMContentLoaded", () => {
  <!-- Formulario de Retiro -->
 <div class="bg-white p-6 rounded shadow flex flex-col h-full">
   <h2 class="text-2xl font-bold text-red-700 mb-4">Solicitud de Retiro</h2>
-  <form action="/api/estudiante/retiro" method="POST" class="flex flex-col flex-grow space-y-4">
+  <form  class="flex flex-col flex-grow space-y-4">
     
     <!-- Selección de semestre -->
     <div>
