--- a/src/views/admin/gestionUsuario.ejs
+++ b/src/views/admin/gestionUsuario.ejs
@@ -7,19 +7,28 @@
     <form action="/api/admin/crear-usuario" method="POST" class="grid grid-cols-1 md:grid-cols-2 gap-4">
       <div>
         <label for="nombre" class="block font-semibold">Nombre</label>
-        <input type="text" id="nombre" name="nombre" class="w-full border p-2 rounded" required>
+        <input type="text" id="nombre" name="nombre" class="w-full border p-2 rounded" placeholder="Gabriel Bolivar" required>
       </div>
       <div>
         <label for="correo" class="block font-semibold">Correo</label>
-        <input type="email" id="correo" name="correo" class="w-full border p-2 rounded" required>
+        <input type="email" id="correo" name="correo" class="w-full border p-2 rounded" placeholder="ejemplo@ejemplo.com" required>
       </div>
       <div>
-        <label for="cedula" class="block font-semibold">Cédula</label>
-        <input type="text" id="cedula" name="cedula" class="w-full border p-2 rounded" required>
-      </div>
+          <label for="cedula" class="block text-sm font-medium text-gray-700">Nro de Cédula</label>
+          <div class="mt-1 flex rounded-md shadow-sm">
+            <select name="pais" id="pais"
+              class="inline-flex items-center px-3 rounded-l-md border border-gray-300 bg-gray-50 text-gray-700 text-sm focus:outline-none">
+              <option value="V">V-</option>
+              <option value="E">E-</option>
+            </select>
+            <input type="text" id="cedula" name="cedula" placeholder="28051690" required
+              class="w-full border p-2 rounded"/>
+          </div>
+        </div>
       <div>
         <label for="rol" class="block font-semibold">Rol</label>
         <select id="rol" name="rol" class="w-full border p-2 rounded" required>
+          <option value="">Selecciona un Rol</option>
           <option value="Estudiante">Estudiante</option>
           <option value="Docente">Docente</option>
           <option value="Admin">Admin</option>
@@ -27,7 +36,7 @@
       </div>
       <div class="md:col-span-2">
         <label for="clave" class="block font-semibold">Contraseña</label>
-        <input type="password" id="clave" name="clave" class="w-full border p-2 rounded" required>
+        <input type="password" id="clave" name="clave" class="w-full border p-2 rounded" placeholder="*********" required>
       </div>
       <div class="md:col-span-2">
         <button type="submit" 
