--- a/src/views/admin/gestionAdicionRetiro.ejs
+++ b/src/views/admin/gestionAdicionRetiro.ejs
@@ -4,7 +4,7 @@
   <!-- Formulario de nueva solicitud (admin) -->
   <div class="bg-gray-50 p-6 rounded shadow mb-8">
     <h3 class="text-lg font-semibold text-blue-700 mb-4">Registrar nueva solicitud</h3>
-    <form action="/api/admin/adicion-retiro" method="POST" class="grid grid-cols-1 md:grid-cols-2 gap-4">
+    <form class="grid grid-cols-1 md:grid-cols-2 gap-4">
       <!-- Estudiante -->
       <div>
         <label for="estudiante_id" class="block font-semibold">Estudiante</label>
@@ -104,7 +104,7 @@
             <td class="px-4 py-2 text-center">
             <div class="flex flex-col items-center space-y-2">
               <!-- Formulario aprobar -->
-              <form action=/api/admin/adicion-retiro/<%= sol.id %>/estado" method="POST" class="w-full">
+              <form  class="w-full">
                 <input type="hidden" name="estado" value="Aprobada">
                 <button type="submit" 
                         class="w-32 bg-green-600 text-white px-3 py-1 rounded hover:bg-green-700 transition">
@@ -112,7 +112,7 @@
                 </button>
               </form>
               <!-- Formulario rechazar -->
-              <form action="/api/admin/adicion-retiro/<%= sol.id %>/estado" method="POST" class="w-full">
+              <form class="w-full">
                 <input type="hidden" name="estado" value="Rechazada">
                 <button type="submit" 
                         class="w-32 bg-red-600 text-white px-3 py-1 rounded hover:bg-red-700 transition">
@@ -168,7 +168,7 @@
             </td>
             <td class="px-4 py-2"><%= sol.creado_en %></td>
             <td class="px-4 py-2 text-center">
-              <form action="/api/admin/adicion-retiro/<%= sol.id %>/eliminar" method="POST" class="inline">
+              <form class="inline">
                 <button type="submit" class="bg-red-600 text-white px-3 py-1 rounded hover:bg-red-700 transition"
                         onclick="return confirm('¿Seguro que deseas eliminar esta solicitud?')">
                   Eliminar
