--- a/src/views/admin/gestionUsuario.ejs
+++ b/src/views/admin/gestionUsuario.ejs
@@ -7,8 +7,6 @@
       Crear nuevo usuario
     </h3>
     <form
-      action="/api/admin/crear-usuario"
-      method="POST"
       class="grid grid-cols-1 md:grid-cols-2 gap-4"
     >
       <div>
@@ -43,8 +41,8 @@
             id="pais"
             class="inline-flex items-center px-3 rounded-l-md border border-gray-300 bg-gray-50 text-gray-700 text-sm focus:outline-none"
           >
-            <option value="V">V-</option>
-            <option value="E">E-</option>
+            <option value="1">V-</option>
+            <option value="0">E-</option>
           </select>
           <input
             type="text"
@@ -112,7 +110,7 @@
                  class="hidden fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50">
               <div class="bg-white rounded-lg shadow-lg p-6 w-96">
                 <h3 class="text-lg font-semibold text-blue-700 mb-4">Editar Usuario</h3>
-                <form action="/api/admin/usuarios/<%= usuario.id %>/editar" method="POST" class="space-y-3">
+                <form class="space-y-3">
                   <div>
                     <label class="block text-sm font-semibold">Nombre</label>
                     <input type="text" name="nombre" value="<%= usuario.nombre %>" 
